syntax = "proto3";

option csharp_namespace = "LibraryService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetListOfBooks(stream HelloRequest) returns (stream BooksTitles);
  rpc GetBookInfo(stream HelloRequest) returns (stream BookInfo);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message BooksTitles{
	string books = 1;
}
message BookInfo{
	string name=1;
	string author = 2;
	string description = 3;
}

